<resources>
    <string name="app_name">Social Hour</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="common_signin_button_text_long"> </string>
    <string name="sign_in_with_google">Sign In With Google</string>


    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="social_hour">Social Hour</string>
    <string name="tag_line">Make The Most Out Of Your Free Time</string>
    <string name="event_title">New Event</string>

    <string name="login_image">This is the image at the login screen</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>


    <!-- Strings related to add menu -->
    <string name="add_menu_title">Add or Edit Event</string>
    <string name="edit_event_name">Event Name:</string>
    <string name="edit_event_time">Event time:</string>
    <string name="edit_event_start_date">Start date:</string>
    <string name="edit_event_end_date">End date:</string>
    <string name="edit_event_groups">Add Groups:</string>
    <string name="add_event">Add Event</string>
    <string name="cancel">Cancel</string>
    <string name="edit_event_time_start">Start time:</string>
    <string name="edit_event_time_end">End time:</string>
    <string name="empty_time_button">--:--</string>
    <string name="empty_date_button">--/--/--</string>
    <string name="edit_is_all_day_title">All Day?</string>

    <string-array name="privacy_array">
        <item>Default</item>
        <item>Private</item>
        <item>Public</item>
    </string-array>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="title_activity_frontend_activity">frontend_activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_add_event">add_event</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toast_confirm">OK</string>
    <string name="toast_cancel">Cancel</string>
    <string name="title_activity_add_menu_activity">add_menu_activity</string>
    <string name="event_description">Description:</string>
    <string name="Privacy_ViewText">Privacy:</string>
    <string name="no_event_text">No events created yet! Click the icon below to add one.</string>
    <string name="no_friends_text">Social Hour is much more fun with friends! Click the button below to add one.</string>
    <string name="no_groups_text">You haven\'t joined any groups yet! Click the button to create one.</string>
    <string name="title_activity_settings_activity">Settings</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="action_search">Search</string>
    <string name="friends_search_hint">Name of friend:</string>
    <string name="friend_result_text">Sample User Name Text</string>
    <string name="is_friend_text">Boolean</string>
    <string name="title_activity_add_group_activity">add_group_activity</string>
    <string name="groups_add_friends_text">Add Friends</string>
    <string name="settings_display_name">Display Name (How people see you on here)</string>
    <string name="settings_time_display">Time Display</string>
    <string name="display_name_hint"> </string>
    <string name="radio_12_hour_text">12 Hour</string>
    <string name="radio_24_hour_text">24 Hour</string>
    <string name="settings_sign_out_button">Sign Out</string>
    <string name="settings_sign_out_textview">Sign Out (Will close the app!)</string>
    <string name="settings_privacy_hint">Default Privacy for New Events</string>
    <string name="radio_private_text">Private</string>
    <string name="radio_public_text">Public</string>
    <string name="google_calendar_integration_textview">Integrate with Google Calendar</string>
    <string name="empty_text" />
    <string name="google_calendar_integrate_buttontext">Integrate</string>
    <string name="event_creation_test">Test Event Creation</string>
    <string name="title_calendar_activity">Calendar</string>

</resources>
