<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="socialhour.socialhour.edit_settings_activity"
    tools:showIn="@layout/activity_edit_settings_activity">

    <!--<include layout="@layout/add_event_layout"/>-->

    <TextView
        android:id="@+id/display_name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_display_name"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/display_name_edittext"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/display_name_edittext"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:layout_weight="3.21"
        android:hint="@string/display_name_hint"
        android:inputType="text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display_name_textview" />


    <TextView
        android:id="@+id/time_display_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_time_display"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/display_name_edittext"
        tools:layout_editor_absoluteX="24dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_display_textview"
        android:id="@+id/linearLayout">

        <RadioButton
            android:id="@+id/radio_12_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_12_hour_text" />

        <RadioButton
            android:id="@+id/radio_button_24hr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_24_hour_text" />

    </LinearLayout>

    <TextView
        android:id="@+id/settings_sign_out_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_sign_out_textview"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/settings_sign_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Sign Out"
        tools:text="@string/settings_sign_out_button"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/settings_sign_out_textview"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />


</android.support.constraint.ConstraintLayout>