<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_top_margin"
    android:background="@color/background_Color"
    tools:context="socialhour.socialhour.Login"
    android:weightSum="1">


    <!-- Login progress -->

    <ImageView
        android:layout_width="291dp"
        android:layout_height="138dp"
        android:src="@drawable/icon_black_border"
        android:adjustViewBounds="false"
        android:contentDescription="@string/login_image" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.07" />

    <TextView
        android:text="@string/social_hour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:gravity="center_horizontal"
        android:layout_weight="0.04"
        android:typeface="serif" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.03" />

    <TextView
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:gravity="center_horizontal"
        android:text="@string/tag_line" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.08" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.21" />

</LinearLayout>
